使用 Colaboratory 建立

--- a/2022/05/variance.ipynb
+++ b/2022/05/variance.ipynb
@@ -17,9 +17,9 @@
         "\n",
         "**观看视频**\n",
         "\n",
-        "[![YouTube](https://icon-icons.com/downloadimage.php?id=168737&root=2699/PNG/32/&file=youtube_logo_icon_168737.png)]() \n",
-        "[![BiliBili](https://icon-icons.com/downloadimage.php?id=206792&root=3261/PNG/32/&file=bilibili_logo_icon_206792.png)]() \n",
-        "[![iXigua](https://icon-icons.com/downloadimage.php?id=154582&root=2596/PNG/32/&file=xigua_icon_154582.png)]()\n"
+        "[![YouTube](https://icon-icons.com/downloadimage.php?id=168737&root=2699/PNG/32/&file=youtube_logo_icon_168737.png)](https://youtu.be/tSBk9sJ25JQ) \n",
+        "[![BiliBili](https://icon-icons.com/downloadimage.php?id=206792&root=3261/PNG/32/&file=bilibili_logo_icon_206792.png)](https://www.bilibili.com/video/BV1kU4y1m7uV/) \n",
+        "[![iXigua](https://icon-icons.com/downloadimage.php?id=154582&root=2596/PNG/32/&file=xigua_icon_154582.png)](https://www.ixigua.com/7099248726815965732)\n"
       ],
       "metadata": {
         "id": "_1tD-y7StET-"
@@ -28,6 +28,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# 安装Manim\n",
         "!sudo apt install libcairo2-dev ffmpeg \\\n",
         "    texlive texlive-latex-extra texlive-fonts-extra \\\n",
         "    texlive-latex-recommended texlive-science \\\n",
